2010-03-30  Juri Linkov  <juri@jurta.org>

	Make occur handle multi-line matches cleanly with context.
	http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg01280.html

	* replace.el (occur-accumulate-lines): Add optional arg `pt'.
	(occur-engine): Add local variables `ret', `prev-after-lines',
	`prev-lines'.  Use more arguments for `occur-context-lines'.
	Set first elem of its returned list to `data', and the second elem
	to `prev-after-lines'.  Don't print the separator line.
	In the end, print remaining context after-lines.
	(occur-context-lines): Add new arguments `begpt', `endpt',
	`lines', `prev-lines', `prev-after-lines'.  Rewrite to combine
	after-lines of the previous match with before-lines of the
	current match and not overlap them.  Return a list with two
	values: the output line and the list of context after-lines.

2010-03-30  Juri Linkov  <juri@jurta.org>

	* replace.el (occur-accumulate-lines): Fix a bug where the first
	context line at the beginning of the buffer was missing.

2010-03-30  Eli Zaretskii  <eliz@gnu.org>

	* files.el: Make bidi-display-reordering safe variable for boolean
	values.

2010-03-29  Phil Hagelberg  <phil@evri.com>
	    Chong Yidong  <cyd@stupidchicken.com>

	* subr.el: Extend progress reporters to perform "spinning".
	(progress-reporter-update, progress-reporter-do-update): Handle
	non-numeric value arguments.
	(progress-reporter--pulse-characters): New var.

2010-03-28  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-start): Fix regexp detection
	of initial cd command (Bug#5771).

2010-03-28  Stefan Guath  <stefan@automata.se>  (tiny change)

	* find-dired.el (find-dired): Use read-directory-name (Bug#5777).

2010-03-27  Nick Roberts  <nickrob@snap.net.nz>

	Restore GDB/MI fuctionality removed by r99212.
        * lisp/progmodes/gdb-mi.el: Restored.
	* lisp/progmodes/gdb-ui.el: Removed.
	* lisp/progmodes/gud.el: Re-accommodated for gdb-mi.el.

2010-03-25  Glenn Morris  <rgm@gnu.org>
